--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Daniela_Villacis_Prueba_01</string>
+    <string name="textview_nombre">Nombres:</string>
+    <string name="textview_apellido">Apellidos: </string>
+    <string name="textview_dividendo">Dividendo</string>
+    <string name="textview_divisor">Divisor</string>
 </resources>
